--- a/baseStats.yml
+++ b/baseStats.yml
@@ -26,10 +26,10 @@ Pikachu: [70, 112, 101]
 Raichu: [120, 193, 165]
 Sandshrew: [100, 126, 145]
 Sandslash: [150, 182, 202]
-NidoranF: [110, 86, 94]
+Nidoranf: [110, 86, 94]
 Nidorina: [140, 117, 126]
 Nidoqueen: [180, 180, 174]
-NidoranM: [92, 105, 76]
+Nidoranm: [92, 105, 76]
 Nidorino: [122, 137, 112]
 Nidoking: [162, 204, 157]
 Clefairy: [140, 107, 116]
